# FinTech-compliance-auditor-NVIDIA-NIM-RAG-pipeline-MCP-agent-Langchain

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  docker-compose.duckdns.yml  docker-compose.https.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  gitinfo.txt  mcp.json  status.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: auth.py  config.py  db.py  main.py  worker.py
backend/app/agent/: graph.py  mcp_tools.py
backend/app/api/: agent.py  audit.py  filings.py  health.py  rules.py  search.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: alerts.py  audit_service.py  embeddings.py  filing_scope.py  ingestion.py  rag_engine.py  reports.py  retriever.py  scoring.py  vectorstore.py
backend/scripts/: demo.py  seed.py
backend/tests/: conftest.py  test_agent.py  test_filing_scope.py  test_health.py  test_isolation.py  test_rag.py  test_rules.py
deploy/: deploy.sh  oracle-setup.sh
deploy/hf-space/: Dockerfile  README.md  nginx.conf  supervisord.conf
frontend/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  vite-env.d.ts
frontend/src/components/: FilingList.tsx  FindingsTable.test.tsx  FindingsTable.tsx  ScoreCard.tsx  UploadForm.tsx
