[project]
name = "compliance-auditor"
version = "0.1.0"
description = "Automated FinTech Corporate Compliance Auditor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "celery>=5.4",
    "redis>=5.0",
    "chromadb-client>=0.5",
    "pdfplumber>=0.11",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-text-splitters>=0.2",
    "langchain-nvidia-ai-endpoints>=0.3", 
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langgraph>=0.1",
    "weasyprint>=62",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
